# flatarchive

./: Cargo.toml  README.md
examples/: bzip.rs
src/: entry.rs  lib.rs  main.rs
src/compression/: bzip.rs  mod.rs
